.kube/local/03-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: tareas-namespace
spec:
  selector:
    matchLabels:
      aplicacion: frontend
  replicas: 1
  template:
    metadata:
      labels:
        aplicacion: frontend
    spec:
      containers:
        - name: frontend
          image: loliconario69/laravel:v3
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /app
              name: project
      volumes:
        - name: project
          hostPath:
            path: /root/Frontend
            type: Directory
