.kube/local/04-Services.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: tareas-namespace
spec:
  selector:
    aplicacion: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
