.kube/local/05-Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-load-balancer
  namespace: tareas-namespace
spec:
  ingressClassName: traefik
  rules:
    - host: www.tareas-namespace.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
